syntax = "proto3";

import "google/protobuf/timestamp.proto";
option csharp_namespace = "Profile.API";

package passwordChange;


service PasswordChange {

  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);

}

message ChangePasswordRequest {
	int64 id = 1;
	string password = 2;
}

message ChangePasswordResponse {
}
